# Tai-Launchpad

./: .gitignore  DEVLOG.md  LICENSE  PLAN.md  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
app/: README.md  next.config.ts  package-lock.json  package.json
app/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/app/(dashboard)/: layout.tsx  loading.tsx
app/src/app/(dashboard)/agent/[id]/: page.tsx
app/src/app/(dashboard)/agents/: page.tsx
app/src/app/(dashboard)/docs/: layout.tsx
app/src/app/(dashboard)/docs/concepts/: page.tsx
app/src/app/(dashboard)/docs/faq/: page.tsx
app/src/app/(dashboard)/hire/: page.tsx
app/src/app/(dashboard)/network/: page.tsx
app/src/app/(dashboard)/start/: page.tsx
app/src/app/(dashboard)/work/[id]/: page.tsx
app/src/app/(marketing)/: layout.tsx  page.tsx
app/src/app/agent/[id]/: page.tsx
app/src/app/agents/: page.tsx
app/src/app/docs/: page.tsx
app/src/app/docs/cli/: page.tsx
app/src/app/docs/concepts/: page.tsx
app/src/app/docs/faq/: page.tsx
app/src/app/docs/hiring/: page.tsx
app/src/app/docs/quickstart/: page.tsx
app/src/app/hire/: page.tsx
app/src/app/llms.txt/: route.ts
app/src/app/work/[id]/: page.tsx
app/src/components/: ActivityFeed.tsx  AgentCard.tsx  AutoRefresh.tsx  ConnectButton.tsx  DirectPayForm.tsx  Footer.tsx  HeaderTicker.tsx  HireForm.tsx  LivePulse.tsx  Nav.tsx  NetworkBanner.tsx  StatCard.tsx  TradeForm.tsx  WalletProvider.tsx  WorkOrderActions.tsx  primitives.tsx
app/src/components/docs/: DocsKit.tsx  DocsSidebar.tsx
app/src/components/landing/: Architecture.tsx  CliSurface.tsx  Footer.tsx  GetStarted.tsx  Hero.tsx  LiveClock.tsx  Nav.tsx  Primitives.tsx  Roadmap.tsx  Wedge.tsx
app/src/lib/: config.ts  format.ts  known-agents.ts  sui.ts  tai.ts
docs/: MASCOT.md
examples/cloudflare-agent/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
examples/cloudflare-agent/src/: feed.ts  index.ts  sui.ts  telegram.ts
examples/sovereign-agent/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
examples/sovereign-agent/src/: index.ts  signer.ts  sui.ts
examples/test-agent/: Move.toml  published.json
examples/test-agent/sources/: larry.move
landing/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/components/: Architecture.tsx  Footer.tsx  GetStarted.tsx  Hero.tsx  Modes.tsx  Nav.tsx  Roadmap.tsx  Section.tsx
move/: Move.toml  Published.toml  published.json
move/sources/: agent_display.move  agent_treasury.move  bonding_curve.move  fees.move  launchpad.move  publisher.move  views.move  work_order.move
move/tests/: bonding_curve_tests.move  fees_tests.move  launch_tests.move  launchpad_tests.move  service_tests.move  test_coin.move  trade_tests.move  treasury_tests.move  views_tests.move  work_order_tests.move
rust/: Cargo.toml
rust/tai-cli/: Cargo.toml  README.md
rust/tai-cli/src/: commands.rs  config.rs  launch.rs  main.rs  output.rs
rust/tai-cli/templates/agent_coin/: Move.toml.tmpl
rust/tai-cli/templates/agent_coin/sources/: coin.move.tmpl
rust/tai-core/: Cargo.toml  README.md
rust/tai-core/src/: client.rs  config.rs  error.rs  ids.rs  lib.rs  reads.rs  rpc.rs  signer.rs  work_order.rs
rust/tai-core/tests/: testnet_reads.rs
