[package]
name = "tai-cli"
description = "Command-line interface for Tai — the Sui-native tokenized agentic infrastructure layer."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "tai"
path = "src/main.rs"

[dependencies]
tai-core = { path = "../tai-core" }

clap.workspace = true
tokio.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
