[package]
name = "tai-core"
description = "Core library for Tai — PTB builders, signers, JSON-RPC client, and typed reads for the Tai agent-economy launchpad on Sui."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/TaiStream/Tai-Launchpad"
documentation = "https://docs.rs/tai-core"
readme = "README.md"
rust-version = "1.75"
keywords = ["sui", "agents", "launchpad", "move", "ai"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[lib]
name = "tai_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
hex.workspace = true
base64ct.workspace = true

ed25519-dalek.workspace = true
blake2.workspace = true
sha2.workspace = true

reqwest.workspace = true
url.workspace = true

tracing.workspace = true
